@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.16.1 -->
+<!-- Generated with glade 3.22.2 -->
 <interface>
   <requires lib="gtk+" version="3.8"/>
   <object class="GtkWindow" id="toplevel">
@@ -192,6 +192,9 @@
                         <child type="tab">
                           <placeholder/>
                         </child>
+                        <style>
+                          <class name="sheets"/>
+                        </style>
                       </object>
                       <packing>
                         <property name="expand">True</property>
